--- a/style.css
+++ b/style.css
@@ -100,3 +100,18 @@ main {
 .img2 {
     margin-bottom: 1%;
 }
+
+footer {
+    background-image: url(./img/footer.jpg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 300px;
+    
+}
+
+.yozuv {
+    color: #fff;
+    text-align: center;
+    
+}
